<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rahul.braintrainerapp.MainActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="276dp"
        android:layout_height="182dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:contentDescription="@string/go"
        android:onClick="start"
        android:text="@string/startButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="60sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503"
        tools:text="GO!" />

    <TextView
        android:id="@+id/Timer"
        android:layout_width="114dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_orange_light"
        android:backgroundTint="@android:color/holo_orange_light"
        android:paddingEnd="10sp"
        android:paddingStart="25sp"
        android:paddingTop="5sp"
        android:text="@string/timerView"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/background_dark"
        android:textSize="40sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="104dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingEnd="10sp"
        android:paddingStart="20sp"
        android:paddingTop="7sp"
        android:text="@string/ScoreKeeper"
        android:textColor="@android:color/background_light"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/Sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/SumGenerator"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <GridLayout
        android:id="@+id/gridLayoutScore"
        android:layout_width="368dp"
        android:layout_height="200dp"
        android:layout_marginBottom="182dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/button2"
            android:layout_width="102dp"
            android:layout_height="66dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@android:color/holo_purple"
            android:onClick="chooseAnswer"
            android:tag="1"
            android:text="@string/tag1"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="322dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="102dp"
            android:layout_height="66dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:background="@android:color/holo_blue_light"
            android:onClick="chooseAnswer"
            android:tag="0"
            android:text="@string/tag0"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="369dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="102dp"
            android:layout_height="66dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@android:color/holo_orange_dark"
            android:onClick="chooseAnswer"
            android:tag="2"
            android:text="@string/tag2"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="369dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="102dp"
            android:layout_height="66dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:background="@android:color/holo_green_light"
            android:onClick="chooseAnswer"
            android:tag="3"
            android:text="@string/tag3"
            android:textSize="50sp"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="369dp" />
    </GridLayout>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.839"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="144dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="playAgain"
        android:text="@string/play_again"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

</android.support.constraint.ConstraintLayout>
